2008-04-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_mrl_to_title):
	Have a nicer label when loading tracks from a DVD (Closes: #526037)

2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/totem.defs:
	* bindings/python/totem.override:
	* src/plugins/youtube/youtube.py:
	* src/totem-video-list.c: (totem_video_list_get_ui_manager):
	* src/totem-video-list.h: Add a menu entry to open YouTube videos in
	the web browser. (Closes: #521908)

2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/totem.defs: Remove set_mrl_* functions from the
	bindings, as they bypass the playlist.
	* src/plugins/totem-plugin.c:
	* src/totem-cell-renderer-video.c:
	* src/totem-object.c:
	* src/totem.c: Add API documentation for most of the plugin-visible
	API. (Helps: #524119)

2008-04-08  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/plugins/youtube/youtube.py: Fix RequestError exception to
	actually work.

============ Version 2.23.1

2008-04-08  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.23.1

2008-04-08  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_strdupnv), (bacon_video_widget_get_mrls):
	xine-lib doesn't NULL terminate its string arrays, so do without
	(Closes: #526497)

2008-04-07  Philip Withnall  <pwithnall@svn.gnome.org>

	* bindings/python/totem.defs:
	* bindings/python/totem.override:
	* src/plugins/youtube/youtube.py:
	* src/totem-object.c: (totem_get_video_widget_backend_name):
	* src/totem.h: Add runtime checks for flvdemux and souphttpsrc and
	display an error if they're not present for YouTube videos.
	(Closes: #522547)

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* data/Makefile.am: Fix bugreport script not having
	a full-path (Closes: #526664)

2008-04-07  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (totem_action_load_media_device):