@@ -1,3 +1,9 @@
+2008-04-09  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-message-connection.c:
+	* src/bacon-message-connection.h: Re-add exception lost in rev 2122
+	(Closes: #525856)
+
 2008-04-08  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-playlist.c (totem_playlist_mrl_to_title):
